--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+        <a href="/about/">About</a>
+		
 		<h1>Hi, there! I'm Kate.</h1>
 		<p>Is this thing on?</p>
 	</body>
