--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,13 +10,12 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-    <body>
-        <a href="/">Home</a>
+	<body>
+		<a href="/">Home</a>
         <a href="/blog/">Blog</a>
         <a href="/about/">About</a>
-
-        <h1>My Astro Site</h1>
-        <h1>My Astro Learning Blog</h1>
-        <p>This is where I will post about my journey learning Astro.</p>
-    </body>
+		
+		<h1>Hi, there! I'm Kate.</h1>
+		<p>Is this thing on?</p>
+	</body>
 </html>
