--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,8 +15,7 @@
         <a href="/blog/">Blog</a>
         <a href="/about/">About</a>
 
-        <h1>My Astro Site</h1>
-        <h1>My Astro Learning Blog</h1>
-        <p>This is where I will post about my journey learning Astro.</p>
+        <h1>About Me</h1>
+        <h2>... and my new Astro site!</h2>
     </body>
 </html>
