--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,7 @@
         <a href="/blog/">Blog</a>
         <a href="/about/">About</a>
 		
-		<h1>Hi, there! I'm Kate.</h1>
-		<p>Is this thing on?</p>
+		<h1>My Astro Learning Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
 	</body>
 </html>
