--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,18 @@
 ---
+const pageTitle = "About Me";
 
+const identity = {
+    firstName:  "Kate",
+    city: "New York",
+    occupation: "Data Consultant",
+    hobbies: ["yoga", "reading", "long walks"], 
+};
+
+const skills =["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs", "Python", "R", "Alteryx", "Tableau", "Snowflake", "Figma"]
+
+const happy = true;
+const finished = false;
+const goal = 3;
 ---
 
 <html lang="en">
@@ -8,14 +21,33 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
     <body>
         <a href="/">Home</a>
         <a href="/blog/">Blog</a>
         <a href="/about/">About</a>
 
-        <h1>About Me</h1>
+        <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
+
+        <p>Here are a few facts about me:</p>
+        <ul>
+            <li>My name is {identity.firstName}</li>
+            <li>I'm based in {identity.city} and I work as a {identity.occupation}</li>
+            {identity.hobbies.length >=2 &&
+                <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+            }
+        </ul>
+        <p>My skills are:</p>
+        <ul>
+            {skills.map((skill) => <li>{skill}</li>)}
+        </ul>
+
+        {happy && <p>I am happy to be learning Astro!</p>}
+
+        {finished && <p> I finished this tutorial!</p>}
+
+        {goal == 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is to finish in {goal} days.</p>}
     </body>
 </html>
